添加保养手册功能

--- a/locale/strings.properties
+++ b/locale/strings.properties
@@ -143,6 +143,16 @@ DetailServiceTitle=Service
 FreeshippingHint=Freeshipping
 addToCartSuccess=Added successfully
 
+MMTitle=Maintenance Manual
+MMDesc1=Polish frequently with a soft polishing cloth to maintain the shine. A polishing cloth won’t remove scratches, so it’s important that you protect your jewellery. You can buy polishing cloths and care kits from your local Pandora store.
+MMDesc2=Store jewellery separately in a tarnish-resistant jewellery box or jewellery pouch and keep it away from abrasive surfaces.
+MMDesc3=Shade freshwater cultured pearls and leather from direct sunlight or strong lighting, to prevent fading.
+MMDesc4=Handle jewellery with love and care, especially freshwater cultured pearls, mother of pearl, glass charms and charms made entirely of a stone (with a metal core). Be extra careful not to drop them on the floor or knock them against hard surfaces as this could hurt their delicate structures.
+MMDesc5=Remove jewellery prior to swimming, bathing and doing sports or other physical activity.
+MMDesc6=Limit contact with make-up, creams, perfume and lotions.
+MMDesc7=Avoid silver dips, polishing liquids, ultrasonic cleaning and strong chemicals.
+MMDesc8=Take care of the hidden silicone grips that some designs feature to keep jewellery fixed in perfect position. They are sensitive, so don’t use the dips and chemicals we mention above or expose them to extreme hot or cold temperatures. This could weaken the silicone’s gripping ability.
+
 # cart
 ShoppingCart=Shopping Cart
 ShoppingSummary=Shopping Summary
