--- a/locale/strings_de.properties
+++ b/locale/strings_de.properties
@@ -143,6 +143,16 @@ DetailServiceTitle=Bedienung
 FreeshippingHint=Kostenloser Versand
 addToCartSuccess=Erfolgreich hinzugefügt
 
+MMTitle=Wartungshandbuch
+MMDesc1=Polieren Sie häufig mit einem weichen Poliertuch, um den Glanz zu erhalten. Ein Poliertuch entfernt keine Kratzer. Daher ist es wichtig, dass Sie Ihren Schmuck schützen. Sie können Poliertücher und Pflegesets in Ihrem örtlichen Pandora-Geschäft kaufen.
+MMDesc2=Bewahren Sie Schmuck separat in einer anlaufsicheren Schmuckschatulle oder einem Schmuckbeutel auf und halten Sie ihn von abrasiven Oberflächen fern.
+MMDesc3=Schattieren Sie Süßwasser-Zuchtperlen und Leder vor direkter Sonneneinstrahlung oder starker Beleuchtung, um ein Ausbleichen zu verhindern.
+MMDesc4=Behandeln Sie Schmuck mit Liebe und Sorgfalt, insbesondere Süßwasser-Zuchtperlen, Perlmutt, Glasanhänger und Charms, die vollständig aus Stein (mit Metallkern) bestehen. Achten Sie besonders darauf, dass Sie sie nicht auf den Boden fallen lassen oder gegen harte Oberflächen stoßen, da dies ihre empfindlichen Strukturen verletzen könnte.
+MMDesc5=Entfernen Sie den Schmuck vor dem Schwimmen, Baden und Sport oder anderen körperlichen Aktivitäten.
+MMDesc6=Beschränken Sie den Kontakt mit Make-up, Cremes, Parfüm und Lotionen.
+MMDesc7=Vermeiden Sie Silbereinbrüche, Polierflüssigkeiten, Ultraschallreinigung und starke Chemikalien.
+MMDesc8=Achten Sie auf die versteckten Silikongriffe, die einige Designs aufweisen, um den Schmuck in perfekter Position zu halten. Sie sind empfindlich. Verwenden Sie daher die oben genannten Dips und Chemikalien nicht und setzen Sie sie keinen extrem heißen oder kalten Temperaturen aus. Dies könnte die Greiffähigkeit des Silikons schwächen.
+
 # cart=Warenkorb
 ShoppingCart=Warenkorb
 ShoppingSummary=Einkaufszusammenfassung
