--- a/locale/strings_es.properties
+++ b/locale/strings_es.properties
@@ -143,6 +143,16 @@ DetailServiceTitle=Servicio
 FreeshippingHint=Envío gratis
 addToCartSuccess=Agregado exitosamente
 
+MMTitle=Manual de mantenimiento
+MMDesc1=Pula frecuentemente con un paño de pulido suave para mantener el brillo. Un paño de pulido no eliminará los arañazos, por lo que es importante que proteja sus joyas. Puede comprar paños para pulir y kits de cuidado en su tienda Pandora local.
+MMDesc2=Guarde las joyas por separado en un estuche o estuche para joyas resistente al deslustre y manténgalas alejadas de las superficies abrasivas.
+MMDesc3=Proteja las perlas cultivadas de agua dulce y el cuero de la luz solar directa o de una iluminación intensa para evitar que se decoloren.
+MMDesc4=Maneje las joyas con amor y cuidado, especialmente perlas cultivadas de agua dulce, nácar, dijes de vidrio y dijes hechos completamente de una piedra (con un núcleo de metal). Tenga mucho cuidado de no dejarlos caer al suelo o golpearlos contra superficies duras, ya que esto podría dañar sus delicadas estructuras.
+MMDesc5=Quítese las joyas antes de nadar, bañarse y hacer deporte u otra actividad física.
+MMDesc6=Limite el contacto con maquillajes, cremas, perfumes y lociones.
+MMDesc7=Evite los baños de plata, los líquidos de pulido, la limpieza ultrasónica y los productos químicos fuertes.
+MMDesc8=Cuida las empuñaduras de silicona ocultas que presentan algunos diseños para mantener las joyas fijadas en una posición perfecta. Son sensibles, por lo tanto, no use las inmersiones y los productos químicos que mencionamos anteriormente ni los exponga a temperaturas extremadamente frías o calientes. Esto podría debilitar la capacidad de agarre de la silicona.
+
 # cart
 ShoppingCart=Carrito
 ShoppingSummary=Resumen de compra
