--- a/locale/strings_fr.properties
+++ b/locale/strings_fr.properties
@@ -143,6 +143,16 @@ DetailServiceTitle=Un service
 FreeshippingHint=Livraison gratuite
 addToCartSuccess=Ajouté avec succès
 
+MMTitle=Manuel de maintenance
+MMDesc1=Polissez fréquemment avec un chiffon de polissage doux pour maintenir la brillance. Un chiffon de polissage n’élimine pas les rayures, il est donc important que vous protégiez vos bijoux. Vous pouvez acheter des chiffons de polissage et des kits d'entretien dans votre magasin Pandora local.
+MMDesc2=Rangez les bijoux séparément dans une boîte à bijoux ou une pochette à bijoux résistant à la ternissure et gardez-les à l'écart des surfaces abrasives.
+MMDesc3=Protégez les perles de culture d'eau douce et le cuir de la lumière directe du soleil ou d'un éclairage intense pour éviter la décoloration.
+MMDesc4=Manipulez les bijoux avec amour et soin, en particulier les perles de culture d'eau douce, la nacre, les breloques en verre et les breloques entièrement constituées d'une pierre (avec un noyau métallique). Faites très attention de ne pas les laisser tomber sur le sol ni de les cogner contre des surfaces dures, car cela pourrait endommager leurs structures délicates.
+MMDesc5=Retirez les bijoux avant de nager, de vous baigner et de faire du sport ou toute autre activité physique.
+MMDesc6=Limitez le contact avec le maquillage, les crèmes, les parfums et les lotions.
+MMDesc7=Évitez les trempages d'argent, les liquides de polissage, le nettoyage par ultrasons et les produits chimiques puissants.
+MMDesc8=Prenez soin des poignées en silicone cachées que certains modèles présentent pour garder les bijoux fixés dans une position parfaite. Ils sont sensibles, alors n’utilisez pas les trempettes et les produits chimiques mentionnés ci-dessus et ne les exposez pas à des températures extrêmement chaudes ou froides. Cela pourrait affaiblir la capacité de préhension du silicone.
+
 # cart
 ShoppingCart=Panier
 ShoppingSummary=Résumé des achats
