--- a/locale/strings_it.properties
+++ b/locale/strings_it.properties
@@ -143,6 +143,16 @@ DetailServiceTitle=Servizio
 FreeshippingHint=Spedizione gratuita
 addToCartSuccess=Aggiunto con successo
 
+MMTitle=Manuale di manutenzione
+MMDesc1=Lucidare frequentemente con un panno morbido per lucidare per mantenere la lucentezza. Un panno per lucidare non rimuove i graffi, quindi è importante proteggere i tuoi gioielli. Puoi acquistare panni per lucidare e kit per la cura dal tuo negozio Pandora locale.
+MMDesc2=Conservare i gioielli separatamente in un portagioie resistente all'appannamento o in una custodia per gioielli e tenerlo lontano da superfici abrasive.
+MMDesc3=Proteggi le perle coltivate d'acqua dolce e la pelle dalla luce solare diretta o da un'illuminazione intensa, per evitare che sbiadiscano.
+MMDesc4=Maneggia i gioielli con amore e cura, in particolare perle coltivate d'acqua dolce, madreperla, ciondoli in vetro e ciondoli realizzati interamente con una pietra (con un'anima in metallo). Fai molta attenzione a non lasciarli cadere sul pavimento o a non sbatterli contro superfici dure poiché ciò potrebbe danneggiare le loro delicate strutture.
+MMDesc5=Rimuovere i gioielli prima di nuotare, fare il bagno e fare sport o altre attività fisiche.
+MMDesc6=Limita il contatto con trucco, creme, profumi e lozioni.
+MMDesc7=Evita i tuffi all'argento, i liquidi lucidanti, la pulizia ad ultrasuoni e i prodotti chimici forti.
+MMDesc8=Prenditi cura delle impugnature in silicone nascoste che alcuni modelli presentano per mantenere i gioielli fissi in posizione perfetta. Sono sensibili, quindi non utilizzare i tuffi e le sostanze chimiche menzionate sopra né esporli a temperature estremamente calde o fredde. Ciò potrebbe indebolire la capacità di presa del silicone.
+
 # cart=#carrello
 ShoppingCart=Carrello
 ShoppingSummary=Riepilogo Acquisti
