--- a/locale/strings_nl.properties
+++ b/locale/strings_nl.properties
@@ -143,6 +143,16 @@ DetailServiceTitle=Onderhoud
 FreeshippingHint=Geen verzendkosten
 addToCartSuccess=Succesvol toegevoegd
 
+MMTitle=Onderhoudshandleiding
+MMDesc1=Regelmatig polijsten met een zachte poetsdoek om de glans te behouden. Een poetsdoek verwijdert geen krassen, dus het is belangrijk dat u uw sieraden beschermt. U kunt poetsdoeken en onderhoudssets kopen bij uw plaatselijke Pandora-winkel.
+MMDesc2=Bewaar sieraden apart in een aanslagbestendig sieradendoosje of sieradenzakje en houd het uit de buurt van schurende oppervlakken.
+MMDesc3=Schaduw gekweekte zoetwaterparels en leer tegen direct zonlicht of sterke verlichting om verkleuring te voorkomen.
+MMDesc4=Behandel sieraden met liefde en zorg, vooral zoetwaterkweekparels, parelmoer, glazen bedels en bedels die volledig van steen zijn gemaakt (met een metalen kern). Wees extra voorzichtig dat u ze niet op de grond laat vallen of tegen harde oppervlakken stoot, aangezien dit hun delicate structuren kan beschadigen.
+MMDesc5=Doe sieraden af ​​voordat u gaat zwemmen, baden, sporten of andere lichamelijke activiteiten uitvoert.
+MMDesc6=Beperk contact met make-up, crèmes, parfum en lotions.
+MMDesc7=Vermijd zilverdruppels, polijstvloeistoffen, ultrasone reiniging en sterke chemicaliën.
+MMDesc8=Zorg voor de verborgen siliconen grips die sommige ontwerpen hebben om sieraden in de perfecte positie te houden. Ze zijn gevoelig, dus gebruik de dipsauzen en chemicaliën die we hierboven noemen, en stel ze niet bloot aan extreem hoge of lage temperaturen. Dit zou het grijpvermogen van de siliconen kunnen verzwakken.
+
 # cart
 ShoppingCart=Winkelwagen
 ShoppingSummary=Winkel samenvatting
