--- a/locale/strings_pl.properties
+++ b/locale/strings_pl.properties
@@ -143,6 +143,16 @@ DetailServiceTitle=Usługa
 FreeshippingHint=Darmowa dostawa
 addToCartSuccess=Dodano pomyślnie
 
+MMTitle=Instrukcja konserwacji
+MMDesc1=Często poleruj miękką ściereczką polerską, aby zachować połysk. Ściereczka do polerowania nie usunie zarysowań, dlatego ważne jest, aby chronić biżuterię. W lokalnym sklepie Pandora możesz kupić ścierki do polerowania i zestawy do pielęgnacji.
+MMDesc2=Biżuterię przechowuj oddzielnie w odpornym na matowienie pudełku na biżuterię lub woreczku na biżuterię i trzymaj z dala od powierzchni ściernych.
+MMDesc3=Osłoń perły hodowlane słodkowodne i skórę przed bezpośrednim działaniem promieni słonecznych lub silnego oświetlenia, aby zapobiec blaknięciu.
+MMDesc4=Obchodź się z biżuterią z miłością i troską, zwłaszcza z perłami hodowlanymi słodkowodnymi, masą perłową, szklanymi charmsami i charmsami wykonanymi w całości z kamienia (z metalowym rdzeniem). Zachowaj szczególną ostrożność, aby nie upuścić ich na podłogę ani nie uderzyć nimi o twarde powierzchnie, ponieważ może to uszkodzić ich delikatną strukturę.
+MMDesc5=Zdejmij biżuterię przed pływaniem, kąpielą, uprawianiem sportu lub inną aktywnością fizyczną.
+MMDesc6=Ogranicz kontakt z makijażem, kremami, perfumami i balsamami.
+MMDesc7=Unikaj srebrnych kąpieli, płynów do polerowania, czyszczenia ultradźwiękowego i silnych chemikaliów.
+MMDesc8=Uważaj na ukryte silikonowe uchwyty, które są dostępne w niektórych projektach, aby utrzymać biżuterię w idealnym miejscu. Są wrażliwe, więc nie używaj wspomnianych powyżej kąpieli i chemikaliów ani nie wystawiaj ich na ekstremalnie wysokie lub niskie temperatury. Może to osłabić przyczepność silikonu.
+
 # cart
 ShoppingCart=Koszyk 
 ShoppingSummary=Podsumowanie zakupów
