--- a/locale/strings_pt.properties
+++ b/locale/strings_pt.properties
@@ -143,6 +143,16 @@ DetailServiceTitle=Serviço
 FreeshippingHint=Envio Grátis
 addToCartSuccess=Adicionado com sucesso
 
+MMTitle=Manual de manutenção
+MMDesc1=Polir frequentemente com um pano de polimento macio para manter o brilho. Um pano de polimento não remove arranhões, por isso é importante que você proteja suas joias. Você pode comprar panos de polimento e kits de cuidados em sua loja Pandora local.
+MMDesc2=Guarde as joias separadamente em uma caixa ou bolsa de joias resistente a manchas e mantenha-as longe de superfícies abrasivas.
+MMDesc3=Proteja as pérolas cultivadas de água doce e o couro da luz solar direta ou de iluminação forte, para evitar o desbotamento.
+MMDesc4=Manuseie as joias com amor e cuidado, especialmente pérolas de cultura de água doce, madrepérola, amuletos de vidro e amuletos feitos inteiramente de pedra (com um núcleo de metal). Tenha muito cuidado para não deixá-los cair no chão ou batê-los contra superfícies duras, pois isso pode ferir suas estruturas delicadas.
+MMDesc5=Remova as joias antes de nadar, tomar banho e praticar esportes ou outra atividade física.
+MMDesc6=Limite o contato com maquiagem, cremes, perfumes e loções.
+MMDesc7=Evite banhos de prata, líquidos de polimento, limpeza ultrassônica e produtos químicos fortes.
+MMDesc8=Cuide dos punhos de silicone ocultos que alguns designs apresentam para manter as joias fixas na posição perfeita. Eles são sensíveis, então não use os banhos e produtos químicos que mencionamos acima ou os exponha a temperaturas extremas de calor ou frio. Isso pode enfraquecer a capacidade de preensão do silicone.
+
 # cart
 ShoppingCart=Cesta
 ShoppingSummary=Resumo de compra
