--- a/locale/strings_se.properties
+++ b/locale/strings_se.properties
@@ -143,6 +143,16 @@ DetailServiceTitle=Service
 FreeshippingHint=Freeshipping
 addToCartSuccess=Tillagd med framgång
 
+MMTitle=Underhållsmanual
+MMDesc1=Polera ofta med en mjuk polerduk för att bibehålla glansen. En polerduk tar inte bort repor, så det är viktigt att du skyddar dina smycken. Du kan köpa polerdukar och skötselpaket från din lokala Pandora-butik.
+MMDesc2=Förvara smycken separat i en smutsbeständig smyckeskrin eller smyckepåse och håll dem borta från slipande ytor.
+MMDesc3=Skugga sötvattensodlade pärlor och läder från direkt solljus eller stark belysning för att förhindra blekning.
+MMDesc4=Hantera smycken med kärlek och omsorg, särskilt sötvattensodlade pärlor, pärlemor, glas charmar och berlocker helt gjorda av en sten (med en metallkärna). Var extra försiktig så att du inte tappar dem på golvet eller slår dem mot hårda ytor eftersom det kan skada deras känsliga strukturer.
+MMDesc5=Ta bort smycken innan du simmar, badar och gör sport eller annan fysisk aktivitet.
+MMDesc6=Begränsa kontakten med smink, krämer, parfym och lotioner.
+MMDesc7=Undvik silverdoppar, poleringsvätskor, ultraljudsrengöring och starka kemikalier.
+MMDesc8=Ta hand om de dolda silikonhandtagen som vissa mönster har för att hålla smyckena i perfekt läge. De är känsliga, så använd inte dopp och kemikalier som vi nämner ovan eller utsätt dem för extrema heta eller kalla temperaturer. Detta kan försvaga silikonets gripande förmåga.
+
 # cart
 ShoppingCart=Varukorg
 ShoppingSummary=Varukorg summa
