--- a/locale/strings_de.properties
+++ b/locale/strings_de.properties
@@ -180,6 +180,7 @@ logisticsMessage3=Einverstanden mit den folgenden Bedingungen
 logisticsMessage4=1. Bestellungen werden ab dem 15. Februar 2021 versendet
 logisticsMessage5=2. Die Rückerstattung für stornierte Bestellungen wird nach dem 15. Februar 2021 bearbeitet
 logisticsMessage6=Aufgrund der Pandemiesituation, wählen Sie bitte die entsprechenden Begriffe
+AllTitle=Alle
 
 # check_shipping
 ShippingAddress=Lieferanschrift
