--- a/locale/strings_es.properties
+++ b/locale/strings_es.properties
@@ -180,6 +180,7 @@ logisticsMessage3=Aceptó los siguientes términos
 logisticsMessage4=1. Los pedidos se enviarán a partir del 15 de febrero de 2021
 logisticsMessage5=2. El reembolso por cancelar pedidos se procesará después del 15 de febrero de 2021.
 logisticsMessage6=Debido a la situación de la pandemia, elija los términos relevantes
+AllTitle=Todas
 
 # check_shipping
 ShippingAddress=Dirección de envío
