--- a/locale/strings_fr.properties
+++ b/locale/strings_fr.properties
@@ -180,6 +180,7 @@ logisticsMessage3=A accepté les conditions suivantes
 logisticsMessage4=1. Les commandes seront expédiées à partir du 15 février 2021
 logisticsMessage5=2. Le remboursement des annulations de commandes sera traité après le 15 février 2021
 logisticsMessage6=En raison de la situation pandémique, veuillez choisir les termes pertinents
+AllTitle=Tout
 
 # check_shipping
 ShippingAddress=Adresse de livraison
