--- a/locale/strings_it.properties
+++ b/locale/strings_it.properties
@@ -180,6 +180,7 @@ logisticsMessage3=Ha accettato i seguenti termini
 logisticsMessage4=1. Gli ordini verranno spediti a partire dal 15 febbraio 2021
 logisticsMessage5=2. Il rimborso per l'annullamento degli ordini verrà elaborato dopo il 15 febbraio 2021
 logisticsMessage6=A causa della situazione pandemica, scegliere i termini pertinenti
+AllTitle=Tutti
 
 # check_shipping=#controlla spedizione
 ShippingAddress=Indirizzo Spedizione
