--- a/locale/strings_nl.properties
+++ b/locale/strings_nl.properties
@@ -180,6 +180,7 @@ logisticsMessage3=Akkoord gegaan met de volgende voorwaarden
 logisticsMessage4=1. Bestellingen worden verzonden vanaf 15 februari 2021
 logisticsMessage5=2. Restitutie voor het annuleren van bestellingen wordt verwerkt na 15 februari 2021
 logisticsMessage6=Kies vanwege de pandemische situatie de relevante voorwaarden
+AllTitle=Alle
 
 # check_shipping
 ShippingAddress=Verzend adres
