--- a/locale/strings_pl.properties
+++ b/locale/strings_pl.properties
@@ -180,6 +180,7 @@ logisticsMessage3=Zgodził się na poniższe warunki
 logisticsMessage4=1. Zamówienia będą wysyłane od 15 lutego 2021 roku
 logisticsMessage5=2. Zwrot kosztów anulowania zamówienia zostanie zrealizowany po 15 lutego 2021 roku
 logisticsMessage6=W związku z pandemią prosimy o wybranie odpowiednich terminów
+AllTitle=Wszystko
 
 # check_shipping
 ShippingAddress=Adres odbiorcy przesyłki
