--- a/locale/strings_pt.properties
+++ b/locale/strings_pt.properties
@@ -180,6 +180,7 @@ logisticsMessage3=Concordou com os seguintes termos
 logisticsMessage4=1. Os pedidos serão enviados a partir de 15 de fevereiro de 2021
 logisticsMessage5=2. Reembolso para cancelamento de pedidos será processado após 15 de fevereiro de 2021
 logisticsMessage6=Devido à situação de pandemia, escolha os termos relevantes
+AllTitle=Tudo
 
 # check_shipping
 ShippingAddress=Endereço de frete
