--- a/locale/strings_se.properties
+++ b/locale/strings_se.properties
@@ -180,6 +180,7 @@ logisticsMessage3=Gick med på följande villkor
 logisticsMessage4=1. Beställningar skickas från och med den 15 februari 2021
 logisticsMessage5=2. Återbetalning för annullering av beställningar behandlas efter den 15 februari 2021
 logisticsMessage6=På grund av pandemisituationen, välj relevanta villkor
+AllTitle=Allt
 
 # check_shipping
 ShippingAddress=Leveransadress
