--- a/locale/strings_en.properties
+++ b/locale/strings_en.properties
@@ -180,6 +180,7 @@ logisticsMessage3=Agreed to the following terms
 logisticsMessage4=1. Orders will be shipped from February 15, 2021
 logisticsMessage5=2. Refund for canceling orders will be processed after February 15, 2021
 logisticsMessage6=Due to the pandemic situation, please choose the relevant terms
+AllTitle=All
 
 # check_shipping
 ShippingAddress=Shipping Address
