--- a/locale/strings_de.properties
+++ b/locale/strings_de.properties
@@ -380,6 +380,10 @@ SubmitSuccess=Erfolgreiches Einreichen
 AboutPayment=Zahlungshinweise
 AboutShip=Über die Versendung
 Other=Anderes
+ContactUsOrderNo=Bestellnummer
+CancelOrder=Bestellung stornieren
+OrderNoErrorMsg=Bitte Bestellnummer auswählen
+NoOrderErrorMsg=Keine erfolgreiche Bestellung
 
 # cart
 CartCouponHint=Neu hier? Bekommen Sie die Gutscheine!
