--- a/locale/strings_es.properties
+++ b/locale/strings_es.properties
@@ -380,6 +380,10 @@ SubmitSuccess=Enviado
 AboutPayment=Sobre pago
 AboutShip=Sobre envío
 Other=Otro
+ContactUsOrderNo=Número de orden
+CancelOrder=Cancelar orden
+OrderNoErrorMsg=Seleccione el número de pedido
+NoOrderErrorMsg=Ningún pedido exitoso
 
 # cart
 CartCouponHint=¿Nuevo por aquí?¡Reclama tus cupones!
