--- a/locale/strings_fr.properties
+++ b/locale/strings_fr.properties
@@ -380,6 +380,10 @@ SubmitSuccess=Soumis avec succès
 AboutPayment=À propos du paiement
 AboutShip=À propos du navire
 Other=Autre
+ContactUsOrderNo=Numéro de commande
+CancelOrder=annuler la commande
+OrderNoErrorMsg=Veuillez sélectionner le numéro de commande
+NoOrderErrorMsg=Pas de commande réussie
 
 # cart
 CartCouponHint=Nouveau ici? Obtenez vos coupons!
