--- a/locale/strings_it.properties
+++ b/locale/strings_it.properties
@@ -380,6 +380,10 @@ SubmitSuccess=inviato con successo
 AboutPayment=Riguardo il pagameto
 AboutShip=Riguardo la spedizione
 Other=Altro
+ContactUsOrderNo=Numero d'ordine
+CancelOrder=Annulla Ordine
+OrderNoErrorMsg=Si prega di selezionare il numero d'ordine
+NoOrderErrorMsg=Nessun ordine andato a buon fine
 
 # cart=Carrello
 CartCouponHint=Sei nuovo? Ricevi i tuoi coupons! 
