--- a/locale/strings_nl.properties
+++ b/locale/strings_nl.properties
@@ -380,6 +380,10 @@ SubmitSuccess=Succesvol verstuurd
 AboutPayment=Over betaling
 AboutShip=Over verzenden
 Other=Anders
+ContactUsOrderNo=Bestellingsnummer
+CancelOrder=Annuleer bestelling
+OrderNoErrorMsg=Selecteer bestelnummer
+NoOrderErrorMsg=Geen succesvolle bestelling
 
 # cart
 CartCouponHint=Nieuw hier? Ontvang uw coupons!
