--- a/locale/strings_pl.properties
+++ b/locale/strings_pl.properties
@@ -380,6 +380,10 @@ SubmitSuccess=Wysłano pomyślnie
 AboutPayment=O płatności
 AboutShip=O wysyłce
 Other=Inne
+ContactUsOrderNo=Numer zamówienia
+CancelOrder=Anuluj zamówienie
+OrderNoErrorMsg=Proszę wybrać numer zamówienia
+NoOrderErrorMsg=Brak pomyślnego zamówienia
 
 # cart
 CartCouponHint=Nowy tutaj? Odbierz swoje kupony!
