--- a/locale/strings_pt.properties
+++ b/locale/strings_pt.properties
@@ -380,6 +380,10 @@ SubmitSuccess=Enviado
 AboutPayment=Sobre o pagamento
 AboutShip=Sobre o frete
 Other=Outro
+ContactUsOrderNo=Número do pedido
+CancelOrder=Cancelar pedido
+OrderNoErrorMsg=Selecione o número do pedido
+NoOrderErrorMsg=Nenhum pedido bem-sucedido
 
 # cart
 CartCouponHint=Recém chegado? Obtenha os seus cupons!
