--- a/locale/strings_se.properties
+++ b/locale/strings_se.properties
@@ -380,6 +380,10 @@ SubmitSuccess=Meddelandet skickats
 AboutPayment=Om betalingen
 AboutShip=Om frakten
 Other=Andra
+ContactUsOrderNo=Ordernummer
+CancelOrder=Avbryt beställningen
+OrderNoErrorMsg=Välj beställningsnummer
+NoOrderErrorMsg=Ingen lyckad beställning
 
 # cart
 CartCouponHint=Ny kund? Få din rabattkod!
