--- a/locale/strings_en.properties
+++ b/locale/strings_en.properties
@@ -380,6 +380,10 @@ SubmitSuccess=Submit Success
 AboutPayment=About Payment
 AboutShip=About Ship
 Other=Other
+ContactUsOrderNo=Order Number
+CancelOrder=Cancel Order
+OrderNoErrorMsg=Please select order number
+NoOrderErrorMsg=No successful Order
 
 # cart
 CartCouponHint=New Here? Get your coupons!
