修改联系我们功能

--- a/locale/strings.properties
+++ b/locale/strings.properties
@@ -384,6 +384,7 @@ ContactUsOrderNo=Order Number
 CancelOrder=Cancel Order
 OrderNoErrorMsg=Please select order number
 NoOrderErrorMsg=No successful Order
+ChooseTitle=Please Choose
 
 # cart
 CartCouponHint=New Here? Get your coupons!
