--- a/locale/strings_de.properties
+++ b/locale/strings_de.properties
@@ -384,6 +384,7 @@ ContactUsOrderNo=Bestellnummer
 CancelOrder=Bestellung stornieren
 OrderNoErrorMsg=Bitte Bestellnummer auswählen
 NoOrderErrorMsg=Keine erfolgreiche Bestellung
+ChooseTitle=Bitte auswählen
 
 # cart
 CartCouponHint=Neu hier? Bekommen Sie die Gutscheine!
