--- a/locale/strings_es.properties
+++ b/locale/strings_es.properties
@@ -384,6 +384,7 @@ ContactUsOrderNo=Número de orden
 CancelOrder=Cancelar orden
 OrderNoErrorMsg=Seleccione el número de pedido
 NoOrderErrorMsg=Ningún pedido exitoso
+ChooseTitle=Por favor elija
 
 # cart
 CartCouponHint=¿Nuevo por aquí?¡Reclama tus cupones!
