--- a/locale/strings_fr.properties
+++ b/locale/strings_fr.properties
@@ -384,6 +384,7 @@ ContactUsOrderNo=Numéro de commande
 CancelOrder=annuler la commande
 OrderNoErrorMsg=Veuillez sélectionner le numéro de commande
 NoOrderErrorMsg=Pas de commande réussie
+ChooseTitle=Choisissez s'il vous plaît
 
 # cart
 CartCouponHint=Nouveau ici? Obtenez vos coupons!
