--- a/locale/strings_it.properties
+++ b/locale/strings_it.properties
@@ -384,6 +384,7 @@ ContactUsOrderNo=Numero d'ordine
 CancelOrder=Annulla Ordine
 OrderNoErrorMsg=Si prega di selezionare il numero d'ordine
 NoOrderErrorMsg=Nessun ordine andato a buon fine
+ChooseTitle=Si prega di scegliere
 
 # cart=Carrello
 CartCouponHint=Sei nuovo? Ricevi i tuoi coupons! 
