--- a/locale/strings_nl.properties
+++ b/locale/strings_nl.properties
@@ -384,6 +384,7 @@ ContactUsOrderNo=Bestellingsnummer
 CancelOrder=Annuleer bestelling
 OrderNoErrorMsg=Selecteer bestelnummer
 NoOrderErrorMsg=Geen succesvolle bestelling
+ChooseTitle=Gelieve te kiezen
 
 # cart
 CartCouponHint=Nieuw hier? Ontvang uw coupons!
