--- a/locale/strings_pl.properties
+++ b/locale/strings_pl.properties
@@ -384,6 +384,7 @@ ContactUsOrderNo=Numer zamówienia
 CancelOrder=Anuluj zamówienie
 OrderNoErrorMsg=Proszę wybrać numer zamówienia
 NoOrderErrorMsg=Brak pomyślnego zamówienia
+ChooseTitle=Proszę wybrać
 
 # cart
 CartCouponHint=Nowy tutaj? Odbierz swoje kupony!
