--- a/locale/strings_pt.properties
+++ b/locale/strings_pt.properties
@@ -384,6 +384,7 @@ ContactUsOrderNo=Número do pedido
 CancelOrder=Cancelar pedido
 OrderNoErrorMsg=Selecione o número do pedido
 NoOrderErrorMsg=Nenhum pedido bem-sucedido
+ChooseTitle=Por favor escolha
 
 # cart
 CartCouponHint=Recém chegado? Obtenha os seus cupons!
