--- a/locale/strings_se.properties
+++ b/locale/strings_se.properties
@@ -384,6 +384,7 @@ ContactUsOrderNo=Ordernummer
 CancelOrder=Avbryt beställningen
 OrderNoErrorMsg=Välj beställningsnummer
 NoOrderErrorMsg=Ingen lyckad beställning
+ChooseTitle=Vänligen välj
 
 # cart
 CartCouponHint=Ny kund? Få din rabattkod!
