--- a/locale/strings_en.properties
+++ b/locale/strings_en.properties
@@ -384,6 +384,7 @@ ContactUsOrderNo=Order Number
 CancelOrder=Cancel Order
 OrderNoErrorMsg=Please select order number
 NoOrderErrorMsg=No successful Order
+ChooseTitle=Please Choose
 
 # cart
 CartCouponHint=New Here? Get your coupons!
